--- a/index.html
+++ b/index.html
@@ -1096,50 +1096,65 @@
                                 <ul class="product__sidebar-list">
                                     <li class="product-itembar">
                                         <img
-                                            src=""
+                                            src="./assets/image/product-avatar-01.jpg"
                                             alt=""
                                             class="product-itembar__img"
                                         />
+                                        <div class="product-itembar__online">
+                                            <div class="product-online"></div>
+                                        </div>
                                         <span class="product-itembar__name">
                                             John Simth
                                         </span>
                                     </li>
                                     <li class="product-itembar">
                                         <img
-                                            src=""
+                                            src="./assets/image/product-avatar-02.jpg"
                                             alt=""
                                             class="product-itembar__img"
                                         />
+                                        <div class="product-itembar__online">
+                                            <div class="product-online"></div>
+                                        </div>
                                         <span class="product-itembar__name">
                                             Doplace kin
                                         </span>
                                     </li>
                                     <li class="product-itembar">
                                         <img
-                                            src=""
+                                            src="./assets/image/product-avatar-03.jpg"
                                             alt=""
                                             class="product-itembar__img"
                                         />
+                                        <div class="product-itembar__online">
+                                            <div class="product-online"></div>
+                                        </div>
                                         <span class="product-itembar__name">
                                             Roblik Plah
                                         </span>
                                     </li>
                                     <li class="product-itembar">
                                         <img
-                                            src=""
+                                            src="./assets/image/product-avatar-04.jpg"
                                             alt=""
                                             class="product-itembar__img"
                                         />
+                                        <div class="product-itembar__online">
+                                            <div class="product-online"></div>
+                                        </div>
                                         <span class="product-itembar__name">
                                             Tadka loise
                                         </span>
                                     </li>
                                     <li class="product-itembar">
                                         <img
-                                            src=""
+                                            src="./assets/image/product-avatar-05.jpg"
                                             alt=""
                                             class="product-itembar__img"
                                         />
+                                        <div class="product-itembar__online">
+                                            <div class="product-online"></div>
+                                        </div>
                                         <span class="product-itembar__name">
                                             Maisis paul
                                         </span>
