--- a/index.html
+++ b/index.html
@@ -1168,6 +1168,79 @@
                     </div>
                 </div>
             </section>
+
+            <!-- Explore -->
+            <section class="explore">
+                <div class="container">
+                    <!-- Explore top -->
+                    <div class="explore__top">
+                        <h2 class="section-heading explore__heading">
+                            From the <strong>big picture</strong> to every tiny
+                            detail, we got you covered.
+                        </h2>
+                        <a href="#!" class="btn explore__btn">Explore Now</a>
+                    </div>
+
+                    <!-- Explore bottom -->
+                    <div class="explore__bottom">
+                        <div class="explore-objects">
+                            <!-- Explore object -->
+                            <div class="explore-object">
+                                <h3 class="explore-object__heading">
+                                    For developers
+                                </h3>
+                                <p class="explore-object__desc">
+                                    Exepteur sint occaecat cupidatat non
+                                    proident, mollit laborum - semper quis
+                                    lectus nulla.
+                                </p>
+                            </div>
+
+                            <!-- Explore object -->
+                            <div class="explore-object">
+                                <h3 class="explore-object__heading">
+                                    For designers
+                                </h3>
+                                <p class="explore-object__desc">
+                                    Exepteur sint occaecat cupidatat non
+                                    proident, mollit laborum - semper quis
+                                    lectus nulla.
+                                </p>
+                            </div>
+
+                            <!-- Explore object -->
+                            <div class="explore-object">
+                                <h3 class="explore-object__heading">
+                                    For teams
+                                </h3>
+                                <p class="explore-object__desc">
+                                    Exepteur sint occaecat cupidatat non
+                                    proident, mollit laborum - semper quis
+                                    lectus nulla.
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="explore-media">
+                            <img
+                                src="./assets/image/explore-image-01.jpg"
+                                alt=""
+                                class="explore-img"
+                            />
+                            <img
+                                src="./assets/image/explore-image-02.jpg"
+                                alt=""
+                                class="explore-img"
+                            />
+                            <img
+                                src="./assets/image/explore-image-03.jpg"
+                                alt=""
+                                class="explore-img"
+                            />
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
