--- a/index.html
+++ b/index.html
@@ -1239,6 +1239,148 @@
                             />
                         </div>
                     </div>
+
+                    <!-- Explore border -->
+                    <div class="explore__border"></div>
+                </div>
+            </section>
+
+            <!-- Refesh -->
+            <section class="refesh">
+                <div class="container">
+                    <h2 class="section-heading refesh__heading">
+                        <strong>Refreshing</strong> news for developers and
+                        desigers
+                    </h2>
+
+                    <div class="refesh-list">
+                        <!-- Refesh item 1 -->
+                        <div class="refesh-item">
+                            <div class="refesh-item__top">
+                                <img
+                                    src="./assets/image/refesh-image-01.jpg"
+                                    alt=""
+                                    class="refesh-item__img"
+                                />
+                                <div class="refesh-item__job">
+                                    Product Engineer
+                                </div>
+                            </div>
+
+                            <div class="refesh-item__bottom">
+                                <blockquote>
+                                    The quick brown fox jumped over the lazy
+                                    dog.
+                                </blockquote>
+                                <div class="refesh-item__bar"></div>
+                            </div>
+                            <div class="refesh-item__viewall">
+                                <span>View All</span>
+                                <a href="#!" class="refesh-item__arrow">
+                                    <svg
+                                        width="12"
+                                        height="8"
+                                        viewBox="0 0 12 8"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                    >
+                                        <path
+                                            d="M1 4H11M11 4L8 1M11 4L8 7"
+                                            stroke="#FF7667"
+                                            stroke-linecap="round"
+                                            stroke-linejoin="round"
+                                        />
+                                    </svg>
+                                </a>
+                            </div>
+                        </div>
+
+                        <!-- Refesh item 2 -->
+                        <div class="refesh-item">
+                            <div class="refesh-item__top">
+                                <img
+                                    src="./assets/image/refesh-image-02.jpg"
+                                    alt=""
+                                    class="refesh-item__img"
+                                />
+                                <div class="refesh-item__job">
+                                    Design Engineer
+                                </div>
+                            </div>
+
+                            <div class="refesh-item__bottom">
+                                <blockquote>
+                                    The quick brown fox jumped over the lazy
+                                    dog.
+                                </blockquote>
+                                <div
+                                    class="refesh-item__bar refesh-item__bar-design"
+                                ></div>
+                            </div>
+                            <div class="refesh-item__viewall">
+                                <span>View All</span>
+                                <a href="#!" class="refesh-item__arrow">
+                                    <svg
+                                        width="12"
+                                        height="8"
+                                        viewBox="0 0 12 8"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                    >
+                                        <path
+                                            d="M1 4H11M11 4L8 1M11 4L8 7"
+                                            stroke="#0CCE84"
+                                            stroke-linecap="round"
+                                            stroke-linejoin="round"
+                                        />
+                                    </svg>
+                                </a>
+                            </div>
+                        </div>
+
+                        <!-- Refesh item 3 -->
+                        <div class="refesh-item">
+                            <div class="refesh-item__top">
+                                <img
+                                    src="./assets/image/refesh-image-03.jpg"
+                                    alt=""
+                                    class="refesh-item__img"
+                                />
+                                <div class="refesh-item__job">
+                                    Tutorial Engineer
+                                </div>
+                            </div>
+
+                            <div class="refesh-item__bottom">
+                                <blockquote>
+                                    The quick brown fox jumped over the lazy
+                                    dog.
+                                </blockquote>
+                                <div
+                                    class="refesh-item__bar refesh-item__bar-tutorial"
+                                ></div>
+                            </div>
+                            <div class="refesh-item__viewall">
+                                <span>View All</span>
+                                <a href="#!" class="refesh-item__arrow">
+                                    <svg
+                                        width="12"
+                                        height="8"
+                                        viewBox="0 0 12 8"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                    >
+                                        <path
+                                            d="M1 4H11M11 4L8 1M11 4L8 7"
+                                            stroke="#EF8F00"
+                                            stroke-linecap="round"
+                                            stroke-linejoin="round"
+                                        />
+                                    </svg>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
         </main>
